{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 36,
  "lineage": "25bb64b6-0abb-af0c-3107-ffb81baaa7e1",
  "resources": [
    {
      "module": "module.us-e2_default_vpc",
      "mode": "data",
      "type": "aws_ec2_transit_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:us-east-2:216460352875:transit-gateway/tgw-0161fd85298d6acd0",
            "association_default_route_table_id": "tgw-rtb-0f7b525af8a8ea31f",
            "auto_accept_shared_attachments": "enable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "tgw in iss-prod us-east-2",
            "dns_support": "enable",
            "id": "tgw-0161fd85298d6acd0",
            "owner_id": "216460352875",
            "propagation_default_route_table_id": "tgw-rtb-0f7b525af8a8ea31f",
            "tags": {
              "Name": "iss-prod-us-east-2-tgw",
              "contactemail": "cloudinfrastructureservices@PETCO.com",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/aws_terraform/iss-prod",
              "org": "petco",
              "owner": "david.stanford"
            },
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:security-group/sg-095c7e067b17acdce",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-095c7e067b17acdce",
            "ingress": [],
            "name": "default",
            "owner_id": "216460352875",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "default",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-09227d8892f2b8f18",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0cfb3de538e93892b",
              "subnet-0d65b6e96477a7ffd"
            ],
            "tags": {
              "Name": "iss-prod_prod-us-e2-vpc1_tgw-attach",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-0161fd85298d6acd0",
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f",
            "vpc_owner_id": "216460352875"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-017324180646a4d88",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-14-24-85.us-east-2.compute.amazonaws.com",
            "public_ip": "3.14.24.85",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-us-e2-vpc1_az1-public-subnet_nat-eipalloc",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d0daefe0e05ab9da",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-18-63-107.us-east-2.compute.amazonaws.com",
            "public_ip": "3.18.63.107",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "prod-us-e2-vpc1_az2-public-subnet_nat-eipalloc",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc": true
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:internet-gateway/igw-0b773e4d45d2fe07f",
            "id": "igw-0b773e4d45d2fe07f",
            "owner_id": "216460352875",
            "tags": {
              "Name": "prod-us-e2-vpc1_igw",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017324180646a4d88",
            "id": "nat-0c57c3611c58e69ce",
            "network_interface_id": "eni-0d8170de820a2473d",
            "private_ip": "172.25.128.148",
            "public_ip": "3.14.24.85",
            "subnet_id": "subnet-0d7bdf3b7a60b8c8d",
            "tags": {
              "Name": "prod-us-e2-vpc1_az1-public-subnet_nat",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            }
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d0daefe0e05ab9da",
            "id": "nat-019e5086f526e4367",
            "network_interface_id": "eni-0c2164a8127e1d720",
            "private_ip": "172.25.128.237",
            "public_ip": "3.18.63.107",
            "subnet_id": "subnet-0ebf2c561aa44d9f1",
            "tags": {
              "Name": "prod-us-e2-vpc1_az2-public-subnet_nat",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            }
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-024c17f14786ea5bb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c57c3611c58e69ce",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024c17f14786ea5bb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_nat_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee2f216993f90f631080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-019e5086f526e4367",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee2f216993f90f63",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_eip.nat_gateway",
            "module.us-e2_default_vpc.aws_nat_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_transit_gateway",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-private-subnet-172.16.0.0/12",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.16.0.0/12",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-024c17f14786ea5bb3337197873",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-024c17f14786ea5bb",
            "state": "blackhole",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "tgw-0161fd85298d6acd0",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-private-subnet-172.16.0.0/12",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "172.16.0.0/12",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee2f216993f90f633337197873",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee2f216993f90f63",
            "state": "blackhole",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "tgw-0161fd85298d6acd0",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main",
            "module.us-e2_default_vpc.data.aws_ec2_transit_gateway.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b773e4d45d2fe07f",
            "id": "r-rtb-0ec679aa2d4d547ef1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ec679aa2d4d547ef",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_internet_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b773e4d45d2fe07f",
            "id": "r-rtb-09f712030576de8411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09f712030576de841",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_internet_gateway.main",
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-024c17f14786ea5bb",
            "owner_id": "216460352875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-us-e2-vpc1_az1-private-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ee2f216993f90f63",
            "owner_id": "216460352875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-us-e2-vpc1_az2-private-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ec679aa2d4d547ef",
            "owner_id": "216460352875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-us-e2-vpc1_az1-public-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09f712030576de841",
            "owner_id": "216460352875",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "prod-us-e2-vpc1_az2-public-subnet_rtb",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd5969f71e7a1d1b",
            "route_table_id": "rtb-024c17f14786ea5bb",
            "subnet_id": "subnet-0cfb3de538e93892b"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023b1801eb1bae71c",
            "route_table_id": "rtb-0ee2f216993f90f63",
            "subnet_id": "subnet-0d65b6e96477a7ffd"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.private",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035f22d373c0c3d20",
            "route_table_id": "rtb-0ec679aa2d4d547ef",
            "subnet_id": "subnet-0d7bdf3b7a60b8c8d"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0590f1e6247995157",
            "route_table_id": "rtb-09f712030576de841",
            "subnet_id": "subnet-0ebf2c561aa44d9f1"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_route_table.public",
            "module.us-e2_default_vpc.aws_subnet.main",
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "prod-us-e2-vpc1_az1-private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:subnet/subnet-0cfb3de538e93892b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.128.0/26",
            "id": "subnet-0cfb3de538e93892b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216460352875",
            "tags": {
              "Name": "prod-us-e2-vpc1_az1-private-subnet",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc",
              "public": "false"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az1-public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:subnet/subnet-0d7bdf3b7a60b8c8d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.25.128.128/26",
            "id": "subnet-0d7bdf3b7a60b8c8d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216460352875",
            "tags": {
              "Name": "prod-us-e2-vpc1_az1-public-subnet",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc",
              "public": "true"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-private-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:subnet/subnet-0d65b6e96477a7ffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.128.64/26",
            "id": "subnet-0d65b6e96477a7ffd",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "216460352875",
            "tags": {
              "Name": "prod-us-e2-vpc1_az2-private-subnet",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc",
              "public": "false"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "prod-us-e2-vpc1_az2-public-subnet",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:subnet/subnet-0ebf2c561aa44d9f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.25.128.192/26",
            "id": "subnet-0ebf2c561aa44d9f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "216460352875",
            "tags": {
              "Name": "prod-us-e2-vpc1_az2-public-subnet",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc",
              "public": "true"
            },
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:vpc/vpc-0e3ee8fd1f1b3a33f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.25.128.0/24",
            "default_network_acl_id": "acl-081afb59a979799c4",
            "default_route_table_id": "rtb-053956fedf4ad4ff1",
            "default_security_group_id": "sg-095c7e067b17acdce",
            "dhcp_options_id": "dopt-5f0ec434",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e3ee8fd1f1b3a33f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-053956fedf4ad4ff1",
            "owner_id": "216460352875",
            "tags": {
              "Name": "prod-us-e2-vpc1",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.us-e2_default_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "module.us-e2_default_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:216460352875:vpc-endpoint/vpce-05c3be841f3b50c44",
            "cidr_blocks": [
              "52.219.80.0/20",
              "3.5.128.0/22",
              "3.5.132.0/23",
              "52.219.96.0/20"
            ],
            "id": "vpce-05c3be841f3b50c44",
            "owner_id": "216460352875",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "tags": {
              "Name": "prod-us-e2-vpc1_vpce",
              "deployed_by": "terraform",
              "environment": "prod",
              "git_repo_url": "https://gitlab.com/petco/cloud-infrastructure-services/aws_customers_prod/iss-prod/-/tree/master/environments/prod/us-2",
              "ptfe_workspace_url": "https://terraform.petco.com/app/Infrastructure/workspaces/iss-prod-vpc"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0e3ee8fd1f1b3a33f"
          },
          "dependencies": [
            "module.us-e2_default_vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}